fix(demo): remove permanent scrollbar in demo window

--- a/projects/mat-tristate-checkbox-demo/src/styles.scss
+++ b/projects/mat-tristate-checkbox-demo/src/styles.scss
@@ -6,11 +6,6 @@
 
 @import url("~@angular/material/prebuilt-themes/indigo-pink.css");
 
-html,
-body {
-  height: 100%;
-}
-
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
